--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 base64 = "0.22.1"
+clap = "4.5.42"
 docx-handlebars = "0.2.4"
 docx-rs = "0.4.18"
+reqwest = {version="0.12.22", features = ["blocking"] }
+serde = "1.0.219"
 serde_json = "1.0.142"
