--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ docx-rs = "0.4.18"
 reqwest = {version="0.12.22", features = ["blocking"] }
 serde = "1.0.219"
 serde_json = "1.0.142"
+openssl = { version = "0.10", features = ["vendored"] }
