--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -63,3 +63,19 @@ jobs:
       with:
         name: docx-tool-x86_64-pc-windows-gnu
         path: target/x86_64-pc-windows-gnu/release/docx-tool.exe
+  build-wasm32-wasip1:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: install musl
+      run: |
+        # 安装依赖
+        rustup default stable
+        rustup target add wasm32-wasip1
+    - name: Build
+      run: cargo build --target wasm32-wasip1 --release --verbose
+    - name: Upload binary
+      uses: actions/upload-artifact@v4
+      with:
+        name: docx-tool-wasm32-wasip1
+        path: target/wasm32-wasip1/release/docx-tool
