--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.142"
 bytes = "1.10.1"
 rustls = { version = "0.23.31", default-features = false, features = ["ring", "std"] }
 ureq = "3.0.12"
+gluesql = "0.17.0"
