--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ bytes = "1.10.1"
 rustls = { version = "0.23.31", default-features = false, features = ["ring", "std"] }
 ureq = "3.0.12"
 gluesql = "0.17.0"
+async-trait = "0.1.88"
