--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,14 @@ docx-rs = "0.4.18"
 serde = "1.0.219"
 serde_json = "1.0.142"
 bytes = "1.10.1"
-rustls = { version = "0.23.31", default-features = false, features = ["ring", "std"] }
+rustls = { version = "0.23.31", default-features = false, features = [
+    "ring",
+    "std",
+] }
 ureq = "3.0.12"
 gluesql = "0.17.0"
 async-trait = "0.1.88"
 futures = "0.3.31"
 sha2 = "0.10.9"
 hex = "0.4.3"
+async-std = { version = "1.13.1", features = ["attributes"] }
