--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,12 @@ rustls = { version = "0.23.31", default-features = false, features = [
     "std",
 ] }
 ureq = "3.0.12"
-gluesql = {version="0.17.0", default-features = false}
+gluesql = { version = "0.17.0", default-features = false }
 futures = "0.3.31"
 sha2 = "0.10.9"
 hex = "0.4.3"
-async-std = {version="1.13.1", default-features = false,features = ["attributes", "std"] }
 async-trait = "0.1.88"
+tokio = { version = "1.47.1", features = [
+    "rt",
+    "macros",
+], default-features = false }
